# kicapp-kicad-preprocessor

./: README.md
kicapp/: pyproject.toml
kicapp/kicapp/: __init__.py  __main__.py  click_logging.py  console.py
kicapp/tests/: __init__.py  test_console.py  test_logging.py
