[tool.poetry]
name = "kicapp"
version = "0.1.0"
description = "kicapp is a tool that prepares EDA files for importing into KiCad"
authors = ["Down to the Wire <8404598+wireddown@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
