[tool.poetry]
name = "kicapp"
version = "0.1.0"
description = "kicapp is a tool that prepares EDA files for importing into KiCad"
authors = ["Down to the Wire <8404598+wireddown@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.scripts]
kicapp = 'kicapp.console:run'

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ruff = "^0.6.7"
pyright = "^1.1.381"

[tool.pytest.ini_options]
addopts = "--showlocals -rfE"

[tool.ruff]

[tool.pyright]
verboseOutput = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
