[tool.poetry]
name = "kicapp"
version = "0.1.0"
description = "kicapp is a tool that prepares EDA files for importing into KiCad"
authors = ["Down to the Wire <8404598+wireddown@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.scripts]
kicapp = 'kicapp.console:run'

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"


[tool.poe.tasks]
_ruff_check = "ruff check"
_ruff_diff = "ruff format --diff"
_pyright = "pyright"
test = "pytest"
lint.sequence = ["_ruff_check", "_ruff_diff", "_pyright"]
lint.ignore_fail = "return_zero"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ruff = "^0.6.7"
pyright = "^1.1.381"

[tool.pytest.ini_options]
addopts = "--showlocals -rfE"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
    "D203",
    "D211",
    "D213",
    "COM812",
    "ISC001",
]
extend-select = [
    "A",
    "ANN",
    "B",
    "BLE",
    "C4",
    "COM",
    "D",
    "EM",
    "FBT",
    "G",
    "I",
    "ICN",
    "INP",
    "ISC",
    "LOG",
    "N",
    "PL",
    "PIE",
    "PT",
    "PTH",
    "Q",
    "RET",
    "RUF",
    "S",
    "SIM",
    "T10",
    "UP",
    "W",
]

[tool.pyright]
verboseOutput = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
